2008-05-06 Cbris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed 1959063: "accept error" on provider unloading (LocalConnect)

2008-05-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.c, msgqueue.c:
	Reversed original fix for 1919970, added new one
	(patch by Gokulakannan)

2008-05-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
    * indCIMXMLExport.c
    * indCIMXMLHandler.c
    fixed 1896550: Memory leak in exportIndication
    (patch by Tim Potter)

2008-04-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * providerDrv.c
    Fixed 1920539: sfcb crashes in getinstance
    (patch by Tim Potter)

2008-04-24 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed 1951133: httpAdapter crashes if auth library can't be loaded
	(patch by Chris Abbey)

2008-04-23 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed 1919970: Provider process not terminated after idle 
	(w/ LocalConnect) (patch by Luong Nguyen-Duy)

2008-04-17 Gary Readler  <gdr@us.ibm.com>

	* cimcClientSfcbLocal.c:
        Reversed changes from 1879319; was causing a segfault for certain
        testcases

2008-04-16 Gary Readler  <gdr@us.ibm.com>

	* cimcClientSfcbLocal.c configure.ac enumeration.c providerMgr.c providerMgr.h
	  sfcbenum.h :
	added 1828585: Large Volume Support (LocalConnect)

2008-04-15 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpift.h, context.c, instance.c:
	Fixed compiler warnings introduced by 1828500 fix

2008-04-14 Gary Readler  <gdr@us.ibm.com>

	* array.c:
	Fixed 1942130: segfault when array increased by CMSetArrayElementAt

2008-04-09 Sean Swehla
	* Makefile.am, brokerUpc.c, cmpidt.h, cmpift.h, cmpimacs.h, cmpios.h, 
	cmpipl.h, fileRepository.c, fileRepository.h, internalProvider.c, 
	interopProvider.c, providerDrv.c, qualifierProvider.c
	Added 1828500: CMPI 2.0 support
	
2008-04-08 Chris Buccella  <chris@thefoot.local>

	* array.c: