@@ -2,6 +2,8 @@ Changes in 1.3.1preview
 =======================
 
 New features:
+- 1953683 allow sfcb to be built to support localconnect only
+
 
 Bugs fixed:
 - 1879319 (partly rolled back to fix local connect issue)
